# rustgrad

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/rustgrad/: device.rs  dtype.rs  helpers.rs  mod.rs  ops.rs
src/rustgrad/codegen/: kernel.rs
src/rustgrad/shape/: mod.rs  shapetracker.rs  sym.rs  symbolic.rs  view.rs
