[package]
name = "rustgrad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
colored = "2.1.0"
linked-hash-map = "0.5.6"
num-traits = "0.2"
regex = "1.5"
deep-flatten = "0.1.0"
libloading = "0.5"
lru = "0.12.2"